# PyLAT

./: PyLAT.py  README.md  compile.py  compile.sh  flake.nix  plots.py  pyproject.toml  setup.py
Examples/Acetonitrile/DEC/: DEC.ipynb
Examples/Acetonitrile/visc/: Visc.ipynb  inputgenerator.py
Examples/Molten_NaCl/GKC/: GKC.ipynb
Examples/Molten_NaCl/nvt/: NaCl_nvt.ipynb
examples/Acetonitrile/visc/: Visc.ipynb  inputgenerator.py
examples/Molten_NaCl/nvt/: NaCl_nvt.ipynb
pylat/: COMradial.py  MSD.py  __init__.py  calcCOM.py  calcCond.py  calcDielectricConstant.py  calcDiffusivity.py  calcNEconductivity.py  calcVisc.py  calccomf.py  calcdistances.py  distSearch.py  fitVisc.py  getAtomCharges.py  getCoordinationNumber.py  getMolData.py  getTimeData.py  ionpair.py  ipcorr.py  viscio.py
scripts/: PyLAT  PyLATplot
