[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pylat"
version = "0.1.1"
description = "Python LAMMPS Analysis Tools."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "MaginnGroup", email = "ed@nd.edu"}]
dependencies = ["matplotlib", "numba", "numpy>=1.14.1", "scipy>=1.0.0"]

[tool.setuptools.packages.find]
exclude = ["examples*"]

[tool.setuptools]
script-files = ["scripts/PyLAT", "scripts/PyLATplot"]

[tool.ruff]
line-length = 120
